# Renderide

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml
crates/bootstrapper/: Cargo.toml  build.rs  build_support.rs
crates/bootstrapper/build_support/: stale_bootstrapper_artifacts.rs
crates/bootstrapper/src/: cli.rs  config.rs  dialog.rs  host.rs  lib.rs  main.rs  orchestration.rs  paths.rs  photosensitivity_warning.rs  process_state.rs  protocol.rs  protocol_handlers.rs  renderer_link.rs  updater.rs  vr_prompt.rs  watchdogs.rs
crates/bootstrapper/src/host/: output.rs  priority.rs  runtime_config.rs  spawn.rs
crates/bootstrapper/src/paths/: resonite.rs
crates/bootstrapper/src/protocol/: command.rs  queue.rs
crates/bootstrapper/src/protocol_handlers/: clipboard.rs  renderer.rs
crates/bootstrapper/src/updater/: bundle.rs  github.rs  install.rs  release_metadata.rs  startup.rs  state.rs  tests.rs  types.rs
crates/bootstrapper/tests/: build_stale_artifacts.rs  cli_public_surface.rs
crates/interprocess/: Cargo.toml
crates/interprocess/src/: lib.rs  options.rs  publisher.rs  ring.rs  subscriber.rs  windows_security.rs
crates/interprocess/src/memory/: windows.rs
crates/interprocess/src/semaphore/: posix.rs  win.rs
crates/interprocess/tests/: end_to_end.rs
crates/renderide/: Cargo.toml  build.rs  build_support.rs
crates/renderide-shared/: Cargo.toml
crates/renderide-shared/src/: ipc.rs  packing.rs  shared.rs
crates/renderide-shared/src/ipc/: connection.rs  dual_queue.rs  dual_queue_reliable_outbox.rs  dual_queue_shared.rs  shared_memory.rs
crates/renderide-shared/src/packing/: bit_span.rs  extras.rs  memory_packer.rs  memory_unpack_error.rs  type_name.rs
crates/renderide-shared/src/wire_writer/: mesh_layout.rs
crates/renderide-test/: Cargo.toml
crates/renderide-test/src/: cli.rs  error.rs  golden.rs  host.rs  image_io.rs  lib.rs  main.rs  scene.rs
crates/renderide-test/src/host/: asset_upload.rs  command_wait.rs  handshake.rs  scene_session.rs
crates/renderide-test/src/scene/: gltf_fixture.rs  mesh_payload.rs  primitives.rs  textures.rs
crates/renderide-test/src/scene_dsl/: cases.rs  output.rs  runner.rs  suite.rs  tolerance.rs
crates/renderide-test/tests/: spawn_args_table.rs
crates/renderide/assets/xr/: actions.toml
crates/renderide/build_support/: artifacts.rs  git.rs  openxr_loader.rs  openxr_windows_arch.rs  shader.rs  xr_assets.rs
crates/renderide/build_support/shader/: compose.rs  directives.rs  emit.rs  manifest.rs  mirror_once.rs  model.rs  modules.rs  parallel.rs  reflection.rs  source.rs  wrap_once.rs
crates/renderide/shaders/materials/: billboardunlit.wgsl  blur.wgsl  cadshader.wgsl  channelmatrix.wgsl  circle.wgsl  cubemapprojection.wgsl  debug.wgsl  debugchannel.wgsl  depthprojection.wgsl  faceexplodeshader.wgsl  fogboxvolume.wgsl  fresnel.wgsl  fresnellerp.wgsl  furfx-2.0-10layer.wgsl  furfx-2.0-20layer.wgsl  furfx-3.0-10layer.wgsl  furfx-3.0-20layer.wgsl  furfx-3.0-shell-10layer.wgsl  furfx-3.0-shell-20layer.wgsl  furfx-advanced-10layer.wgsl  furfx-advanced-20layer.wgsl  furfx-advanced-40layer.wgsl  furfx-advanced-5layer.wgsl  furfx-advanced-shell-10layer.wgsl  furfx-advanced-shell-20layer.wgsl  furfx-advanced-shell-40layer.wgsl  furfx-advanced-shell-5layer.wgsl  furfx-basic-10layer.wgsl  furfx-basic-20layer.wgsl  furfx-basic-40layer.wgsl  furfx-basic-5layer.wgsl  furfx-selfshadow-blend-10layer.wgsl  furfx-selfshadow-blend-20layer.wgsl  furfx-selfshadow-noblend-10layer.wgsl  furfx-selfshadow-noblend-20layer.wgsl  gamma.wgsl  getdepth.wgsl  gradientskybox.wgsl  grayscale.wgsl  hsv.wgsl  (+95 more)
crates/renderide/src/: app.rs  assets.rs  backend.rs  blackboard_contract.rs  bounds.rs  build_info.rs  camera.rs  color_space.rs  config.rs  cpu_parallelism.rs  crash_context.rs  cull_contract.rs  diagnostics.rs  frame_contract.rs  frame_upload_batch.rs  frontend.rs  gpu.rs  gpu_jobs.rs  gpu_pools.rs  graph_inputs.rs  hi_z_cpu.rs  hi_z_temporal.rs  history_texture.rs  hud_contract.rs  ipc.rs  lib.rs  log_throttle.rs  main.rs  materials.rs  mesh_deform.rs  occlusion.rs  particles.rs  passes.rs  profiling.rs  reflection_probes.rs  render_contract.rs  render_graph.rs  render_phase.rs  runtime.rs  scene.rs  (+4 more)
crates/renderide/src/app/: bootstrap.rs  driver.rs  exit.rs  redraw_plan.rs  window_icon.rs
crates/renderide/src/assets/: mesh.rs  shader.rs  texture.rs  video.rs  worker.rs
crates/renderide/src/backend/: asset_transfers.rs  debug_hud_bundle.rs  facade.rs  frame_gpu.rs  frame_resource_manager.rs  light_gpu.rs  per_draw_resources.rs  per_view_resource_map.rs  shadow_atlas_budget.rs  shadow_quality.rs  world_mesh_frame_plan.rs
crates/renderide/src/camera/: frame.rs  geometry.rs  host_camera_frame.rs  portal.rs  projection.rs  projection_plan.rs  render_task.rs  secondary.rs  stereo.rs  view_id.rs
crates/renderide/src/config/: hud_parity_tests.rs  types.rs
crates/renderide/src/crash_context/: graph_error.rs  minimal.rs  phases.rs  state.rs  tests.rs  xr.rs
crates/renderide/src/diagnostics/: crash_context.rs  gpu_flight_recorder.rs  hud.rs  log_once.rs  per_view.rs  snapshots.rs  watchdog.rs
crates/renderide/src/frame_upload_batch/: batch.rs  scope.rs  stats.rs
crates/renderide/src/frontend/: begin_frame.rs  decoupling.rs  frame_start_performance.rs  input.rs  lockstep_pipeline.rs  lockstep_state.rs  render_cadence.rs  transport.rs
crates/renderide/src/gpu/: context.rs  driver_thread.rs  flight_recorder.rs  frame_bindings.rs  limits.rs  msaa_depth_resolve.rs  present.rs  profiling.rs  resource_retention.rs  submission_state.rs  sync.rs  vr_mirror.rs
crates/renderide/src/gpu_jobs/: readback.rs  submit.rs
crates/renderide/src/gpu_pools/: budget.rs  resource_pool.rs
crates/renderide/src/gpu_resource/: stats.rs
crates/renderide/src/hi_z_cpu/: pyramid.rs  (+3 more)
crates/renderide/tests/: architecture_layers.rs  build_git_metadata.rs  build_openxr_loader.rs  clustered_light_shader_audit.rs  gpu_instrumentation_audit.rs  material_uv_flip_audit.rs  shader_module_audit.rs
(+915 files in other folders)
