# Root Cargo.toml (Workspace Level)
[workspace]
resolver = "3"
members = [
  "crates/renderide",
  "crates/renderide-shared",
  "crates/renderide-test",
  "crates/interprocess",
  "crates/bootstrapper",
  "crates/logger",
]

[profile.dev]
opt-level = 1
incremental = true
codegen-units = 256
debug = "line-tables-only"

# Global Release Build Settings
[profile.release]
opt-level = 3
incremental = false
codegen-units = 1
debug = "line-tables-only"
strip = "debuginfo"
debug-assertions = false
lto = "thin"
overflow-checks = false


[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.rust]
closure_returning_async_block = "warn"
deprecated_safe_2024 = "warn"
deprecated_in_future = "warn"
deref_into_dyn_supertrait = "warn"
elided_lifetimes_in_paths = "warn"
edition_2024_expr_fragment_specifier = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
keyword_idents_2024 = "warn"
let_underscore_lock = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_docs = "warn"
missing_unsafe_on_extern = "warn"
non_ascii_idents = "warn"
redundant_lifetimes = "warn"
rust_2024_guarded_string_incompatible_syntax = "warn"
rust_2024_incompatible_pat = "warn"
rust_2024_prelude_collisions = "warn"
tail_expr_drop_order = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unsafe_attr_outside_unsafe = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unsafe_op_in_unsafe_fn = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
all = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
print_stdout = "warn"
print_stderr = "warn"
mem_forget = "warn"
allow_attributes = "warn"
assigning_clones = "warn"
semicolon_if_nothing_returned = "warn"
manual_let_else = "warn"
match_wildcard_for_single_variants = "warn"
inefficient_to_string = "warn"
implicit_clone = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
filter_map_next = "warn"
iter_over_hash_type = "warn"
iter_with_drain = "warn"
manual_ilog2 = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_midpoint = "warn"
manual_string_new = "warn"
option_as_ref_cloned = "warn"
unreadable_literal = "warn"
ignored_unit_patterns = "warn"
str_split_at_newline = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_join = "warn"
unnecessary_semicolon = "warn"
unused_async = "warn"
rc_buffer = "warn"
large_types_passed_by_value = "warn"
too_many_lines = "warn"
fn_params_excessive_bools = "warn"
debug_assert_with_mut_call = "warn"
copy_iterator = "warn"
into_iter_without_iter = "warn"
iter_not_returning_iterator = "warn"
iter_without_into_iter = "warn"
maybe_infinite_iter = "warn"
zero_sized_map_values = "warn"
redundant_clone = "warn"
or_fun_call = "warn"
as_ptr_cast_mut = "warn"
borrow_as_ptr = "warn"
cast_ptr_alignment = "warn"
non_send_fields_in_send_ty = "warn"
useless_let_if_seq = "warn"
format_push_string = "warn"
allow_attributes_without_reason = "warn"
mut_mut = "warn"
no_effect_underscore_binding = "warn"
no_mangle_with_rust_abi = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ptr_offset_by_literal = "warn"
ref_as_ptr = "warn"
same_length_and_capacity = "warn"
should_panic_without_expect = "warn"
unchecked_time_subtraction = "warn"
unsafe_derive_deserialize = "warn"
path_buf_push_overwrite = "warn"
same_functions_in_if_condition = "warn"
invalid_upcast_comparisons = "warn"
mismatching_type_param_order = "warn"
transmute_ptr_to_ptr = "warn"
rc_mutex = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
large_stack_arrays = "warn"
lossy_float_literal = "warn"
decimal_bitwise_operands = "warn"
suspicious_xor_used_as_pow = "warn"
fallible_impl_from = "warn"
mixed_read_write_in_expression = "warn"
empty_drop = "warn"
verbose_file_reads = "warn"
stable_sort_primitive = "warn"
option_option = "warn"
create_dir = "warn"
needless_bitwise_bool = "warn"
index_refutable_slice = "warn"
map_err_ignore = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
significant_drop_in_scrutinee = "warn"
significant_drop_tightening = "warn"
checked_conversions = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
ref_option = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
if_then_some_else_none = "warn"
redundant_test_prefix = "warn"
mod_module_files = "warn"
unused_peekable = "warn"
doc_link_with_quotes = "warn"
empty_enums = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
from_iter_instead_of_collect = "warn"
implicit_hasher = "warn"
inconsistent_struct_constructor = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
large_digit_groups = "warn"
large_futures = "warn"
linkedlist = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
match_bool = "warn"
match_wild_err_arm = "warn"
naive_bytecount = "warn"
needless_continue = "warn"
range_minus_one = "warn"
redundant_else = "warn"
ref_binding_to_reference = "warn"
ref_option_ref = "warn"
return_self_not_must_use = "warn"
string_add_assign = "warn"
unicode_not_nfc = "warn"
unnecessary_box_returns = "warn"
verbose_bit_mask = "warn"
collection_is_never_read = "warn"
iter_on_empty_collections = "warn"
large_stack_frames = "warn"
nonstandard_macro_braces = "warn"
read_zero_byte_vec = "warn"
set_contains_or_insert = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
trailing_empty_array = "warn"
transmute_undefined_repr = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
unused_rounding = "warn"
as_underscore = "warn"
empty_enum_variants_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
float_cmp_const = "warn"
get_unwrap = "warn"
large_include_file = "warn"
string_add = "warn"
try_err = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
negative_feature_names = "warn"
redundant_feature_names = "warn"
wildcard_dependencies = "warn"
wildcard_imports = "warn"
cognitive_complexity = "warn"
suspicious_operation_groupings = "warn"
unwrap_in_result = "warn"
case_sensitive_file_extension_comparisons = "warn"
range_plus_one = "warn"
missing_fields_in_debug = "warn"
fn_to_numeric_cast_any = "warn"
iter_on_single_items = "warn"
missing_panics_doc = "warn"
inline_always = "warn"
filetype_is_file = "warn"
equatable_if_let = "warn"
enum_glob_use = "warn"
host_endian_bytes = "warn"
bool_to_int_with_if = "warn"
unnested_or_patterns = "warn"
unnecessary_struct_initialization = "warn"
redundant_type_annotations = "warn"
empty_structs_with_brackets = "warn"
future_not_send = "warn"
literal_string_with_formatting_args = "warn"
clear_with_drain = "warn"
search_is_some = "warn"
trivial_regex = "warn"
single_option_map = "warn"
trait_duplication_in_bounds = "warn"
uninhabited_references = "warn"
volatile_composites = "warn"
ignore_without_reason = "warn"
doc_broken_link = "warn"
format_collect = "warn"
self_only_used_in_recursion = "warn"
unused_result_ok = "warn"
