[package]
name = "bootstrapper"
version = "0.1.0"
edition = "2024"
description = "ResoBoot-aligned process bootstrap: spawns Renderite Host, IPC queue loop, renderer and clipboard bridging."

[lib]
path = "src/lib.rs"

[[bin]]
name = "renderide"
path = "src/main.rs"

[[bin]]
name = "renderide-sign-release-manifest"
path = "src/bin/renderide-sign-release-manifest.rs"

[dependencies]
interprocess = { path = "../interprocess" }
logger = { path = "../logger" }
thiserror = "2.0"
arboard = "3.6"
base64 = "0.22"
ed25519-dalek = "2.2"
serde_json = "1.0"
sha2 = "0.11"
getrandom = "0.4"
libc = "0.2"
rfd = { version = "0.17", features = ["common-controls-v6"] }
directories = "6.0"
toml_edit = "0.25"
http = "1.4"
self_update = { version = "0.44", default-features = false, features = [
  "archive-zip",
  "compression-zip-deflate",
  "reqwest",
  "rustls",
] }
zip = { version = "8.6", default-features = false, features = ["deflate"] }
mimalloc = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
libloading = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
ctrlc = "3.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }

[build-dependencies]
embed-manifest = "1.5"

[dev-dependencies]
logger = { path = "../logger" }
tempfile = "3.27"

[lints]
workspace = true
