[package]
name = "interprocess"
version = "0.1.0"
edition = "2024"
description = "Cloudtoid-compatible shared-memory queue for host/renderer IPC"
license = "MIT OR Apache-2.0"

[dependencies]
logger = { path = "../logger" }
memmap2 = "0.9"
thiserror = "2.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
base64 = "0.22"
sha2 = "0.11"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_Memory",
  "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3.27"

[lints]
workspace = true
