[package]
name = "renderide"
version = "0.1.1"
edition = "2024"

[lib]
name = "renderide"
path = "src/lib.rs"

[build-dependencies]
gltf = "1.4"
hashbrown = "0.17"
jobserver = "0.1"
naga = { version = "29.0", features = ["wgsl-in", "wgsl-out", "termcolor"] }
naga_oil = { version = "0.22", default-features = false }
thiserror = "2.0"

[[bin]]
name = "renderide-renderer"
path = "src/main.rs"

[[bin]]
name = "roundtrip"
path = "src/bin/roundtrip.rs"

[features]
## Enables Tracy profiling integration. When active, `profiling::scope!` macros emit CPU spans
## to the Tracy client, frame marks appear in the Tracy GUI timeline, and `wgpu-profiler` inserts
## GPU timestamp queries around render-graph passes, manual GPU passes, copies, readbacks, and
## expensive bounded subpasses.
##
## Usage: `cargo build --profile dev-fast --features tracy`
## For realistic numbers: `cargo build --release --features tracy`
##
## Requires no runtime configuration; connect the Tracy GUI on port 8086 before or after launching.
## Uses Tracy's `ondemand` mode, and the GPU bridge is rebuilt at clean frame boundaries so late
## attach starts with fresh GPU query ids instead of replaying disconnected GPU events.
tracy = [
  "dep:wgpu-profiler",
  "dep:tracy-client",
  "profiling/profile-with-tracy",
  "wgpu-profiler/tracy",
]
## Enables GStreamer-backed video texture playback. When disabled, video texture IPC commands
## still create GPU placeholders (the host sees a black frame), but no decoding occurs and
## `VideoPlayer::new` returns `None`. Off by default to keep cross-platform CI lean -- GStreamer
## system libraries are reliably available on Linux but require manual setup on macOS and Windows.
##
## Usage: `cargo build --features video-textures` (Linux: install `libgstreamer1.0-dev`,
## `libgstreamer-plugins-base1.0-dev`, and `libgstreamer-plugins-good1.0-dev` first;
## the latter provides `videoflip`, used to land frames in the Unity V=0-bottom
## convention shaders expect).
video-textures = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video"]

[package.metadata.cargo-machete]
ignored = ["tracing", "tracy-client"]

[dependencies]
## Thin profiler abstraction. When no backend feature (`profile-with-tracy`, etc.) is active,
## every macro (`profiling::scope!`, `profiling::finish_frame!`, etc.) expands to nothing.
profiling = "1.0"
ahash = "0.8"
bytemuck = { version = "1.25", features = ["derive"] }
glam = { version = "0.33", features = ["bytemuck"] }
logger = { path = "../logger" }
tracing = { version = "0.1", features = ["log-always"] }
renderide-shared = { path = "../renderide-shared" }
interprocess = { path = "../interprocess" }
pollster = "0.4"
rayon = "1.11"
crossbeam-channel = "0.5"
lru = "0.18"
parking_lot = "0.12"
thiserror = "2.0"
## Portable SIMD wrappers (u32x4/etc.) used in mip downsample inner accumulators. Pulled in via
## glam transitively, listed here as a direct dep since renderide CPU code calls it.
wide = "1.4"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
toml_edit = "0.25"
figment = { version = "0.10", features = ["toml", "env"] }
hashbrown = "0.17"
image = { version = "0.25", default-features = false, features = ["png"] }
texture2ddecoder = "0.1"
notify-debouncer-mini = "0.7"
notify = "8.2"
naga = { version = "29.0", features = ["wgsl-in", "wgsl-out", "termcolor"] }
unity-asset = "0.2"
unity-asset-binary = "0.2"
wgpu = "29.0"
winit = "0.31.0-beta.2"
ash = "0.38"
openxr = { version = "0.21", default-features = false, features = ["loaded"] }
imgui = { version = "0.12", features = ["tables-api"] }
imgui-wgpu = "0.28"
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
crash-handler = "0.7"
## Cross-platform stack frame capture and symbol resolution, used by the fatal crash handler to
## emit a hex address list (signal-safe first pass) and a best-effort symbolicated trace
## (second pass) for native faults that bypass Rust's panic hook.
backtrace = "0.3"
bevy_mikktspace = "1.0"
## GPU timestamp query scopes; bridges per-phase GPU timing to Tracy when the `tracy` feature is on.
## Only compiled when the `tracy` workspace feature is enabled.
wgpu-profiler = { version = "0.27", optional = true }
## Tracy client. `enable` activates the native client library; `ondemand` keeps runtime cost
## near-zero by only streaming data while a profiler GUI is attached. Only compiled when the
## `tracy` feature is enabled.
tracy-client = { version = "0.18", optional = true, default-features = false, features = [
  "enable",
  "ondemand",
] }
## Optional: enabled by the `video-textures` feature. Provides the GStreamer pipeline that
## decodes video texture sources into wgpu textures. Without this feature, video texture
## upload paths are stubbed and the host sees a static black placeholder.
gstreamer = { version = "0.25", optional = true }
gstreamer-app = { version = "0.25", optional = true }
gstreamer-video = { version = "0.25", optional = true }
directories = "6.0"
mimalloc = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "29.0", features = ["vulkan-portability"] }

# Bundle DXC into the binary so wgpu's `Dx12Compiler::Auto` picks the static DXC instead of
# falling back to FXC. FXC compiles average ~46 ms (max ~474 ms) and serialise the render thread
# via `materials::pipeline_single_flight_wait`; DXC is multi-threaded and ~5-10x faster, so
# first-touch panel pipelines stop stalling the frame.
[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { version = "29.0", features = ["static-dxc"] }

[dev-dependencies]
jobserver = "0.1"
logger = { path = "../logger" }
naga_oil = { version = "0.22", default-features = false }
tempfile = "3.27"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.4"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Memory",
  "Win32_System_Pipes",
] }

[lints]
workspace = true
